# homelab-vm-provisioner-cli

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  architecture.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup  test  vmctl  vmctl.py  vmctl.yaml  vmssh-admin
_modules/: index.html
_sources/: architecture.rst.txt  getting-started.rst.txt  index.rst.txt
_static/: custom.css
agents/: README.md  coverage-runner.agent.md  defect-fixer.agent.md  doc-writer.agent.md  feature-developer.agent.md  test-writer.agent.md
api/: cli.html  config.html  index.html  managed_nftables.html  network.html  package.html  provision.html  reconciler.html  system.html
configs/: template.yaml.example
coverage/: class_index.html  function_index.html  index.html  status.json  z_2971531bd522494b___init___py.html  z_2971531bd522494b___main___py.html  z_2971531bd522494b_adapters_py.html  z_2971531bd522494b_config_py.html  z_2971531bd522494b_constants_py.html  z_2971531bd522494b_core_py.html  z_2971531bd522494b_domain_py.html  z_2971531bd522494b_managed_nftables_py.html  z_2971531bd522494b_network_py.html  z_2971531bd522494b_provision_py.html  z_2971531bd522494b_reconciler_py.html  z_2971531bd522494b_runtime_observation_py.html  z_2971531bd522494b_service_mode_py.html  z_2971531bd522494b_service_workflows_py.html  z_2971531bd522494b_services_py.html  z_2971531bd522494b_snapshot_service_py.html  z_2971531bd522494b_system_py.html
docs/: architecture.rst  conf.py  getting-started.rst
(+68 files in other folders)
